user: improve Makefile

--- a/user/exper/Makefile
+++ b/user/exper/Makefile
@@ -1,7 +1,7 @@
 all: simple
 
-simple: simple.c
-	gcc --std=gnu2x -Wall -g simple.c -o simple
+simple: simple.c Makefile
+	gcc --std=gnu2x -Wall -Wextra -g simple.c -o simple
 
 clean:
 	rm simple
