user: exper: separate stats functions into separate file

--- a/user/exper/Makefile
+++ b/user/exper/Makefile
@@ -1,7 +1,7 @@
 all: simple
 
-simple: macros.h simple.c Makefile
-	gcc --std=gnu2x -Wall -Wextra -g simple.c -o simple
+simple: macros.h stats.h stats.c simple.c Makefile
+	gcc --std=gnu2x -Wall -Wextra -g stats.c simple.c -o simple
 
 clean:
 	rm simple
